# Omnidigest

./: .env.example  CHANGELOG.md  README-zh.md  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  Makefile  pyproject.toml  requirements.txt
backend/src/: __init__.py  config.py  main.py  manage.py
backend/src/api/: auth.py  deps.py  router.py
backend/src/cli/: __init__.py  auth.py  db.py  jobs.py  kg.py  lint.py  rag.py  rss.py  tests.py  twitter.py
backend/src/core/: cache.py  database.py  llm_manager.py
backend/src/domains/analysis/: alert_service.py  astock_analyzer.py  (+2 more)
backend/src/jobs/: __init__.py  scheduler.py  twitter.py
backend/src/migrations/: 002_1.3.0_breaking_news.sql  003_1.4.0_story_timeline.sql  004_1.5.0_knowledge_graph.sql  004_seed_more_breaking_rss.sql  006_seed_global_breaking_rss.sql  007_1.7.0_twitter_ingestion.sql  008_twitter_triage.sql  009_twitter_events.sql  010_twitter_cooling_time.sql  011_astock_predictions.sql  012_pricing_cache_fields.sql
backend/src/notifications/: __init__.py  manager.py  pusher.py
backend/src/templates/: dingtalk_astock_intraday.md.j2  dingtalk_astock_post_market.md.j2  dingtalk_astock_pre_market.md.j2  dingtalk_breaking.md.j2  dingtalk_default.md.j2  dingtalk_no_critique.md.j2  dingtalk_twitter_alert.md.j2  feishu_astock.md.j2  feishu_breaking.md.j2  feishu_default.md.j2  feishu_twitter_alert.md.j2  telegram_astock_intraday.html.j2  telegram_astock_post_market.html.j2  telegram_astock_pre_market.html.j2  telegram_breaking.html.j2  telegram_default.html.j2  telegram_twitter_alert.html.j2
(+43 files in other folders)
